# spatialsignificance

./: README.md  pyproject.toml  pyproject.toml.template  requirements.txt  setup.cfg  setup.cfg.template  setup.py  upload.sh
src/: spatialsignificance.pyx
tests/: gen_randomfield.py  test.py
